# siso_bot

./: .gitignore  CMakeLists.txt  build.sh  export_path.sh  run_gazebo.sh  setup.sh
Backup/: learnMIMO.py
RNN/: .notes.swp  baseline.py  input_heatmap.py  mimo.py  miso.py  n4sid.py  notes  one_step_mimo.py  plot.py  script.py  siso.py  ssid.py  theta_miso.py  theta_model.h5  theta_model.json  transform.py  utils.py  visualize.py  xy_mimo.py
RNN/data/: data.csv
RNN/data/real_robot_data/: .v_shape_path_1.csv.swp  X_test.pkl  X_train.pkl  back_and_forth.csv  back_and_forth1.csv  back_and_forth1_model.h5  back_and_forth_model.h5  back_and_forth_model.json  data_info.pkl  input_scaler.pkl  output_scaler.pkl  real_robot_data.csv  real_robot_data2.csv  real_robot_data_model.h5  real_robot_data_model.json  start_and_final_3.csv  start_and_final_3_model.h5  start_and_final_3_model.json  start_and_final_5.csv  start_and_final_5_FNN_model.h5  start_and_final_5_FNN_model.json  start_and_final_5_FNN_model_ad.h5  start_and_final_5_FNN_model_ad.json  start_and_final_5_model.h5  start_and_final_5_model.json  straight_0.csv  straight_1.csv  test_trial_names.pkl  testrun1.csv  train_trial_names.pkl  v_shape_path_0.csv  v_shape_path_1.csv  v_shape_path_2.csv  y_test.pkl  y_train.pkl
RNN/data/test_run/: test_run.csv
RNN/data/trial_0_to_3/: trial_0_to_3.csv
RNN/data/trial_0_to_3dot5_step_0dot1/: X_test.npy  X_train.npy  parameters.pkl  scaler.pkl  (+7 more)
data/: data.csv
src/model_push/: CMakeLists.txt  force_cmd.cc  listener.cpp  model_push.cc  model_push_cp.cc  package.xml  talker.cpp
(+64 files in other folders)
